Changing hero image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>We provide a quality water for everyone</p>
             </div>
             <div class="hero-image">
-                <img src="./images/drinking-bottle.jpg" alt="">
+                <img src="./images/droplet-removebg-preview.png" alt="">
                 <div class="img-bg-container">
                     <div id="twelve-point-star"></div>
                 </div>
@@ -52,14 +52,17 @@
             <div class="card-1" data-aos="fade-up">
                 <h2><i class="bi-building"></i> Our Company</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quos recusandae deleniti quas omnis maxime ipsa. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, repellendus.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, repellendus?</p>
             </div>
             <div class="card-2" data-aos="fade-up" data-aos-delay="100">
                 <h2><i class="bi-box-seam"></i> Our Product</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure provident, a sapiente voluptatum nihil cumque? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, eos?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, rem.</p>
             </div>
             <div class="card-3" data-aos="fade-up" data-aos-delay="150">
                <h2><i class="bi-briefcase"></i> Contributors</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima vero quis dicta eum voluptatum, saepe cupiditate quidem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum, sunt.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, ipsam!</p>
             </div>
         </div>
     </div>
